# axum_everyone

./: .env.example  Cargo.toml  README.md  diesel.toml  test_api.ps1  test_api.sh
.github/workflows/: build.yml
api_test/test/: Add joke.bru  Get all jokes.bru  bruno.json  get joke by id.bru
migrations/: 001_create_jokes_table.sql
migrations/2025-02-11-080456_create_jokes/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  models.rs  openapi.rs  router.rs  schema.rs  state.rs
src/handler/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/handlers/: health.rs  jokes.rs  mod.rs  users.rs
src/request/: joke_request.rs  mod.rs  user_request.rs
src/schemas/: joke.rs  mod.rs  user.rs
tests/: integration_test.rs
