[package]
name = "axum_everyone"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
validator = { version = "0.20.0", features = ["derive"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt", "sync"] }
