[package]
name = "axum_everyone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toasty = { version = "0.7", features = ["sqlite", "jiff"] }
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
